--- a/company-leadership.html
+++ b/company-leadership.html
@@ -44,15 +44,15 @@
             <div class="staff-list">
                <div class="staff__item">
                   <div class="staff-image">
-                     <img src="img/staff.jpg" alt="">
+                     <img src="img/staff.png" alt="">
                   </div>
                   <div class="staff__name">Jeff Aaron</div>
-                  <div class="line-red"></div>
+                  <div class="red-line"></div>
                   <div class="staff__text">The team ready and waiting to talk</div>
                </div>
                <div class="staff__item">
                   <div class="staff-image">
-                     <img src="img/staff.jpg" alt="">
+                     <img src="img/staff.png" alt="">
                   </div>
                   <div class="staff__name">Jeff Aaron</div>
                   <div class="line-red"></div>
@@ -70,7 +70,7 @@
             <div class="staff-list">
                <div class="staff__item">
                   <div class="staff-image">
-                     <img src="img/staff.jpg" alt="">
+                     <img src="img/staff.png" alt="">
                   </div>
                   <div class="staff__name">Jeff Aaron</div>
                   <div class="line-red"></div>
@@ -78,7 +78,23 @@
                </div>
                <div class="staff__item">
                   <div class="staff-image">
-                     <img src="img/staff.jpg" alt="">
+                     <img src="img/staff.png" alt="">
+                  </div>
+                  <div class="staff__name">Jeff Aaron</div>
+                  <div class="line-red"></div>
+                  <div class="staff__text">The team ready and waiting to talk</div>
+               </div>
+               <div class="staff__item">
+                  <div class="staff-image">
+                     <img src="img/staff.png" alt="">
+                  </div>
+                  <div class="staff__name">Jeff Aaron</div>
+                  <div class="line-red"></div>
+                  <div class="staff__text">The team ready and waiting to talk</div>
+               </div>
+               <div class="staff__item">
+                  <div class="staff-image">
+                     <img src="img/staff.png" alt="">
                   </div>
                   <div class="staff__name">Jeff Aaron</div>
                   <div class="line-red"></div>
