--- a/company-leadership.html
+++ b/company-leadership.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header></header>
-   <div class="page-company">
+   <div class="page-company circle-bg circle-bg__four circle-bg_noleft">
       <div class="bg-dots"></div>
       <div class="container">
          <h2 class="title">Company</h2>
