--- a/company-leadership.html
+++ b/company-leadership.html
@@ -62,7 +62,7 @@
          </div>
       </div>
 
-      <div class="staff">
+      <div class="staff bg-dots">
          <div class="container">
             <div class="red-line"></div>
             <h3 class="staff__title">Business Development</h3>
