--- a/doskalv/3-page.html
+++ b/doskalv/3-page.html
@@ -295,6 +295,6 @@
    <!--JS-->
    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
    <script src="libs/choises-select/choices.min.js"></script>
-   <script src="js/script.js"></script>
+   <script src="js/script.min.js"></script>
 </body>
 </html>
